[GHI #60] Use real token and fix default icon vertical alignment (#65)
This PR makes icons more consistent by using a specific line height and vertical align. It also adds documentation for icons in general.

--- a/src/components/icon.scss
+++ b/src/components/icon.scss
@@ -15,7 +15,9 @@
   font-variation-settings: 'FILL' var(--mso-fill), 'wght' var(--mso-weight), 'GRAD' var(--mso-grade), 'opsz' var(--mso-optical-sizing);
 
   font-size: var(--rm-font-medium);
-  line-height: var(--rm-line-height-tight);
+
+  line-height: var(--rm-line-height-densest);
+  vertical-align: middle;
 }
 
 // Fill
